# igcse-study-agent

./: .gitignore  .pre-commit-config.yaml  AGENT_SOP.md  LICENSE  QUALITY_DASHBOARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
agent/: __init__.py  cli.py  config.py  match.py
agent/embed/: __init__.py  local.py
agent/generate/: __init__.py  paper_pdf.py  simulator_data.py  solutions_pdf.py
agent/ingest/: __init__.py  crops.py  render.py
agent/review/: __init__.py  queue.py
agent/store/: __init__.py  db.py  schemas.py
evals/: __init__.py  chapter_match.yaml  datasets.py  last_report.md  rubric_grader.yaml  run.py  solution_quality.yaml
prompts/: audit_extraction.md  chapter_priming.md  chapter_profile.md  critic.md  extract_paper_metadata.md  extract_questions.md  improve_solution.md  judge.md  match_verify.md  reconcile.md  rubric.md  solver.md
release/: README.md
simulator/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
simulator/public/papers/french-unit1-unit2/: index.html
simulator/public/sets/: chemistry-the-mole.json  combined-science-chemical-energetics.json  combined-science-chemical-reactions.json  combined-science-electrochemistry.json  index.json
simulator/src/: App.tsx  index.css  test-setup.ts  types.ts
simulator/src/components/: QuestionCard.tsx  ScoreSummary.tsx  SetPicker.tsx
simulator/src/lib/: embeddings.ts  loader.ts
simulator/src/lib/grade/: bridge.mjs  concepts.test.ts  concepts.ts  index.test.ts  index.ts  mcq.test.ts  mcq.ts  (+3 more)
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/unit/: test_cli_save_commands.py  test_crops.py  test_embed.py  test_match.py  test_pdf_builders.py  test_render.py  test_schemas.py
